# Thermohaline-Shear_Instability

./: readme.md  submit_myjob
2-Dedalus3_DirectNumerialSimulation/2.1-Radko2016_FullNSE/: plot_snapshots.py  submit_dedalus_uconn
2-Dedalus3_DirectNumerialSimulation/2.2-Radko2016_FullNSE-Mean_and_Fluctuation/: fluc.ipynb  fluc.py  originalFullNSE.py  readme.md
2-Dedalus3_DirectNumerialSimulation/2.3-Radko2016-StokesModel/: fluc.py
2-Reproduce_Radko2016_FullNSE_results/Dedalus_simulation/: plot_snapshots.py  submit_dedalus_uconn
2-Reproduce_Radko2016_FullNSE_results/Linear_stability_analysis/: amplifying_mode.m  choose_N.m  eig_Radko2016.m  eigenvalue_test.m  findMaxGrowthRate.m  grid_convergence_test_of_max_growth_rate.m  growth_rate_Ri0_25_Pe1000.m  growth_rate_Ri0_25_Pe10000.m  growth_rate_Ri0_25_Pe5500.m  growth_rate_Ri10_Pe100.m  growth_rate_Ri10_Pe10000.m  growth_rate_Ri1_Pe100.m  growth_rate_Ri1_Pe1000.m  growth_rate_Ri1_Pe10000.m  growthrate_Radko2016.m  instruction.ipynb  interp_log10.m  maxGrowthRateMap.m  maxGrowthRateMap_RiPe_Rp2_tau0_01.m  maxGrowthRateMap_RiPe_Rp50_tau0_01.m  savefigure.m  (+7 more)
4-ChannelFlow2_DirectNumerialSimulation/: BUILD_DNS.md  CMakeLists.txt  debug.cpp  makefile  readme.md  run.sh
4-ChannelFlow2_DirectNumerialSimulation/ddc/programs/: CMakeLists.txt  ddc_findeigenvals.cpp  ddc_findsoln.cpp  ddc_simulateflow.cpp
4-ChannelFlow2_DirectNumerialSimulation/ddc/tests/: CMakeLists.txt
4-ChannelFlow2_DoubleDiffusiveConvection/: BUILD_DNS.md  ExecutableGuides.md  HPCsetup.md  ddc_simulateflow.args  ddcflags.txt  dnsflags.txt  processinfo  submit_channelflow_bridges2  submit_channelflow_uconn
4-ChannelFlow2_DoubleDiffusiveConvection/ddc/: CMakeLists.txt  ddc.h  ddcdsi.cpp  ddcdsi.h  ddcflags.h
4-ChannelFlow2_DoubleDiffusiveConvection/ddc/examples/: 2d_diffusive_convection.cpp  2d_finger_convection.cpp  CMakeLists.txt
4-ChannelFlow2_DoubleDiffusiveConvection/ddc/programs/: ddc_continuesoln.cpp  ddc_simulateflow.cpp
4-Compute_Mean_and_Fluctuation/: originalFullNSE.py
5-ChannelFlow/: build_channelflow.sh  run.sh
(+190 files in other folders)
